classes re-org and few tweaks with additional input parameters